--- a/include/themes/paper-plane/main.css
+++ b/include/themes/paper-plane/main.css
@@ -2146,6 +2146,10 @@ tr#realtime td:first-child {
 	-moz-border-radius-topleft: 0px !important;
 }
 
+.menuitem {
+	white-space: nowrap;
+}
+
 .menu_glyph {
 	font-size: 12px;
 	width: 20px;
